// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitHubSettings component renders when not signed in 1`] = `
<div>
  <h4>
    GitHub
  </h4>
  <Blueprint4.Callout>
    <p>
      Your fiddles can be published as GitHub Gists - that way you can share your fiddles with the world!
    </p>
    <Blueprint4.Button
      icon="log-in"
      onClick={[Function]}
      text="Sign in"
    />
  </Blueprint4.Callout>
  <Blueprint4.Callout>
    <Blueprint4.FormGroup>
      <p>
        Enable this option to always publish your fiddle as a revision of the
    default fiddle gist values.
      </p>
      <Blueprint4.Checkbox
        checked={true}
        label="Publish as revision."
        onChange={[Function]}
      />
    </Blueprint4.FormGroup>
  </Blueprint4.Callout>
</div>
`;

exports[`GitHubSettings component renders when signed in 1`] = `
<div>
  <h4>
    GitHub
  </h4>
  <Blueprint4.Callout>
    <p>
      Your fiddles can be published as public GitHub Gists. Using the personal access token you gave us, we logged you into GitHub as
       
      <code>
        Test User
      </code>
      .
    </p>
    <Blueprint4.Button
      icon="log-out"
      onClick={[MockFunction]}
      text="Sign out"
    />
  </Blueprint4.Callout>
  <Blueprint4.Callout>
    <Blueprint4.FormGroup>
      <p>
        Enable this option to always publish your fiddle as a revision of the
    default fiddle gist values.
      </p>
      <Blueprint4.Checkbox
        checked={true}
        label="Publish as revision."
        onChange={[Function]}
      />
    </Blueprint4.FormGroup>
  </Blueprint4.Callout>
</div>
`;
